fix subscriptions feature for php8 and add mailhog

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,10 @@ services:
       - ./database:/var/lib/mysql
     networks:
       - status-db
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    networks:
+      - status-db
